kubernetes/apps/networking/traefik/app/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name traefik
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: default
      services:
        - name: api@internal
          kind: TraefikService
          namespace: networking
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
